Fix for java 8, getFirst is replaced with get(0)